--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>
         aaaaaaaaaaaaa
     </h1>
+    <p>マージする</p>
+    <a href="https://backlog.com/ja/git-tutorial/stepup/09/">サル先生リンク</a>
 </body>
 </html>
